[gd_scene load_steps=11 format=3 uid="uid://bfxvcaf8a5ugq"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_3qqng"]
[ext_resource type="Texture2D" uid="uid://dr0jhwidtdgle" path="res://graphics/player/player.png" id="1_lfkcf"]
[ext_resource type="Texture2D" uid="uid://b1jlo1oph6qfs" path="res://graphics/decals/white.png" id="3_cyn0b"]
[ext_resource type="Texture2D" uid="uid://dcnujspjtr7yl" path="res://graphics/lights/textures/circle_scaled.png" id="4_il3fp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ygau3"]
radius = 21.095

[sub_resource type="Gradient" id="Gradient_chooj"]
colors = PackedColorArray(1, 1, 1, 0.552941, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_huyjq"]
gradient = SubResource("Gradient_chooj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5rlpn"]
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
spread = 10.0
initial_velocity_min = 1200.0
initial_velocity_max = 1200.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.2
color = Color(0.415686, 0.929412, 0.921569, 1)
color_ramp = SubResource("GradientTexture1D_huyjq")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_cynd3"]
polygon = PackedVector2Array(-12, 26, -14, 20, -17, 16, -18, 12, -18, 8, -19, 3, -14, 0, -12, -2, -8, -4, -8, -8, -4, -11, 4, -11, 13, -6, 12, -2, 14, 3, 17, 10, 18, 15, 18, 21, 13, 23, 10, 24, 7, 27, 4, 26, 3, 29, -2, 29, -6, 29)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_64lcy"]
polygon = PackedVector2Array(-1, -15, 14, -15, 19, -31, 7, -18, -4, -31)

[node name="Player" type="CharacterBody2D" groups=["player_and_allies"]]
collision_layer = 25
collision_mask = 14
script = ExtResource("1_3qqng")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 12)
shape = SubResource("CircleShape2D_ygau3")

[node name="PlayerImage" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_lfkcf")

[node name="LaserCooldown" type="Timer" parent="."]
wait_time = 0.168
one_shot = true

[node name="LaserPosition" type="Node2D" parent="."]
position = Vector2(8, -31)

[node name="GPUParticles2D" type="GPUParticles2D" parent="LaserPosition"]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_5rlpn")
texture = ExtResource("3_cyn0b")
lifetime = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_cynd3")

[node name="FlashLight" type="PointLight2D" parent="."]
position = Vector2(6, -16)
range_item_cull_mask = 3
shadow_enabled = true
shadow_item_cull_mask = 3
texture = ExtResource("4_il3fp")
texture_scale = 2.0

[node name="FlOccluder" type="LightOccluder2D" parent="."]
position = Vector2(-1, 6)
occluder = SubResource("OccluderPolygon2D_64lcy")
occluder_light_mask = 2

[node name="GrenadeCooldown" type="Timer" parent="."]
wait_time = 0.23
one_shot = true

[connection signal="timeout" from="LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="GrenadeCooldown" to="." method="_on_grenade_cooldown_timeout"]
